WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135177
REGRESSION (
r171239
): Much more time spent taking snapshots during the PLT
https://bugs.webkit.org/show_bug.cgi?id=135177
Summary
REGRESSION (r171239): Much more time spent taking snapshots during the PLT
Tim Horton
Reported
2014-07-22 14:37:35 PDT
We're taking way more snapshots now due to a mistake in
r171239
. <
rdar://problem/17764847
>
Attachments
patch
(5.05 KB, patch)
2014-07-22 14:43 PDT
,
Tim Horton
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-07-22 14:43:28 PDT
Created
attachment 235316
[details]
patch
Tim Horton
Comment 2
2014-07-22 14:47:11 PDT
http://trac.webkit.org/changeset/171366
Alexey Proskuryakov
Comment 3
2014-07-22 22:53:15 PDT
This change broke three API tests, so I'm going to roll out. Tests that failed: WKUserContentController.ScriptMessageHandlerWithNavigation WebKit2.RestoreSessionStateContainingFormData Tests that timed out: DeviceScaleFactorOnBack.WebKit2
WebKit Commit Bot
Comment 4
2014-07-22 23:00:02 PDT
Re-opened since this is blocked by
bug 135190
Tim Horton
Comment 5
2014-07-23 03:04:54 PDT
What! How is that possible? I added this message very recently and the *only* thing it does is take a snapshot. Will investigate.
Tim Horton
Comment 6
2014-07-23 03:16:49 PDT
The UI process is stuck in a HashTable lock adding a string to the AtomicString table under decidePolicyForResponse. Still unclear how I could have influenced this.
Tim Horton
Comment 7
2014-07-23 03:19:03 PDT
Given
http://trac.webkit.org/changeset/171367
I wonder if ap was off-by-one somehow. Testing now.
Tim Horton
Comment 8
2014-07-23 03:23:48 PDT
Rolling out my patch changes nothing, rolling out Joe's fixes all three tests. gg.
Tim Horton
Comment 9
2014-07-23 03:25:30 PDT
(In reply to
comment #8
)
> Rolling out my patch changes nothing, rolling out Joe's fixes all three tests. gg.
Rolled this one back in in
http://trac.webkit.org/changeset/171471
, will go roll Joe out.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug