Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp
@@ -1626,8 +1626,10 @@ void WebFrameLoaderClient::willChangeCurrentHistoryItem()
     WebPage* webPage = m_frame->page();
     if (!webPage)
         return;
+    if (!m_frame->isMainFrame())
+        return;
 
-    webPage->willChangeCurrentHistoryItem();
+    webPage->willChangeCurrentHistoryItemForMainFrame();
 }
 
 #if USE(CONTENT_FILTERING)
